# pubmed_search_ai

./: .gitignore  README.md
backend/: README.md  langgraph.json  pyproject.toml  run_api.py
backend/src/api/: main.py
backend/src/api/core/: config.py
backend/src/api/models/: requests.py  responses.py
backend/src/api/routes/: chat.py
backend/src/api/services/: agent_service.py
backend/src/med_search/agent/langgraph/: agent.py
backend/src/med_search/agent/langgraph/tools/: __init__.py  medical_tools.py  pubmed_tools.py
backend/src/med_search/models/: schemas.py
backend/src/med_search/services/: llm.py  pubmed.py
backend/src/med_search/services/langgraph/: agent.py  langgraph.json
backend/src/med_search/services/langgraph/tools/: medical_tools.py  search_tools.py
backend/tests/: test_gemini.py  test_pubmed.py  test_pubmed_xml.py
